--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,13 +6,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">User Management</a>
+          <a class="nav-link" routerLink="users">User Management</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Product Management</a>
+          <a class="nav-link" routerLink="listProduit">Product Management</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Provider Management</a>
+          <a class="nav-link" routerLink="listFournisseur"
+            >Provider Management</a
+          >
         </li>
       </ul>
     </div>
